WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
104468
AX: Crash in NSAccessibilityUnignoredDescendant
https://bugs.webkit.org/show_bug.cgi?id=104468
Summary
AX: Crash in NSAccessibilityUnignoredDescendant
chris fleizach
Reported
2012-12-08 23:54:03 PST
Here's the crash 3 libobjc.A.dylib: objc_msgSend + 19 6 libobjc.A.dylib: objc_msgSend + 13 ==> 9 com.apple.AppKit: NSAccessibilityUnignoredDescendant + 23 ≤= 9 com.apple.WebCore: -[WebAccessibilityObjectWrapper attachmentView] + 45 9 com.apple.WebCore: WebCore::AccessibilityObject::detachFromParent + 52 9 com.apple.WebCore: WebCore::AccessibilityRenderObject::clearChildren + 49 9 com.apple.WebCore: WebCore::AccessibilityRenderObject::detach + 18 9 com.apple.WebCore: WebCore::AXObjectCache::~AXObjectCache + 127 9 com.apple.WebCore: WebCore::Document::detach + 169 9 com.apple.WebCore: WebCore::Frame::setView + 68 9 com.apple.WebCore: WebCore::Frame::createView +
Attachments
patch
(4.15 KB, patch)
2012-12-09 00:00 PST
,
chris fleizach
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2012-12-09 00:00:58 PST
Created
attachment 178398
[details]
patch
WebKit Review Bot
Comment 2
2012-12-10 10:37:24 PST
Comment on
attachment 178398
[details]
patch Clearing flags on attachment: 178398 Committed
r137178
: <
http://trac.webkit.org/changeset/137178
>
WebKit Review Bot
Comment 3
2012-12-10 10:37:27 PST
All reviewed patches have been landed. Closing bug.
chris fleizach
Comment 4
2012-12-10 10:41:53 PST
rdar://12724571
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug